# cylinder-detection

./: CMakeLists.txt  cylinder_segmentation.h  main.cpp
pointclouds_segmentation/: pointcloud.pcd  pointcloud2.pcd  pointcloud2_cylinder.pcd  pointcloud2_plane.pcd  pointcloud3.pcd  pointcloud3_cylinder.pcd  pointcloud3_plane.pcd  pointcloud_cylinder.pcd  pointcloud_plane.pcd
